refactored the code architecture. added stubs for handlers. fixed text table.
